<resources>
    <string name="app_name">truth-or-drink</string>
    <string name="instruction">Dir werden im folgenden Fragen oder Aufgaben gestellt. Du musst diese Fragen beantworten oder die Aufgaben ausführen, falls du das nicht möchstest musst du einen Schluck trinken. Falls du auf eine Ja/Nein Frage nein antwortest musst du einen Schluck trinken. Falls du "ich weiß nicht" antwortest musst du einen Schluck trinken.</string>
    <string name="welcome_title">Willkommen zu Truth or Drink</string>
    <string name="player_1_input_text">Spieler 1:</string>
    <string name="hint_player_1">Name von Spieler 1</string>
    <string name="player_2_input_text">Spieler 2:</string>
    <string name="hint_player_2">Name von Spieler 2</string>
    <string name="start_button">Start!</string>
    <string name="end_game_text">End Game</string>
    <string name="top_header_game">Frage von x an y</string>
    <string name="thank_you">Danke für das Spiel!</string>
    <string name="cards_shown">Karten gesamt:</string>
    <string name="sips_player_1">Schlücke Spieler 1:</string>
    <string name="sips_player_2">Schlücke Spieler 2:</string>
</resources>