<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/player_1_input_text"
        app:layout_constraintTop_toBottomOf="@id/instruction_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/et_player_1_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_player_1"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toRightOf="@id/text_player_1"
        app:layout_constraintTop_toBottomOf="@id/instruction_text"
        />

    <TextView
        android:id="@+id/text_player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/player_2_input_text"
        app:layout_constraintTop_toBottomOf="@id/text_player_1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/et_player_2_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_player_2"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@id/text_player_2"
        app:layout_constraintTop_toBottomOf="@id/text_player_1"
        />


    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/green"
        android:layout_margin="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>